--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -611,48 +611,40 @@ video {
   }
 }
 
-.relative {
-  position: relative;
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .flex {
   display: flex;
 }
 
-.h-\[90\%\] {
-  height: 90%;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
 .h-\[80\%\] {
   height: 80%;
+}
+
+.h-\[90\%\] {
+  height: 90%;
 }
 
 .h-full {
   height: 100%;
 }
 
-.h-52 {
-  height: 13rem;
+.h-screen {
+  height: 100vh;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .max-h-\[1000px\] {
   max-height: 1000px;
-}
-
-.max-h-\[800px\] {
-  max-height: 800px;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-screen {
-  width: 100vw;
 }
 
 .w-1\/4 {
@@ -667,11 +659,23 @@ video {
   width: 80%;
 }
 
-.w-52 {
-  width: 13rem;
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-full {
+  width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[100\%\] {
   width: 100%;
 }
 
@@ -681,6 +685,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 
 .items-center {
@@ -734,12 +742,12 @@ video {
   background-size: 20px 20px;
 }
 
-.fill-red-700 {
-  fill: #b91c1c;
-}
-
 .p-8 {
   padding: 2rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-4 {
@@ -752,22 +760,36 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.text-center {
-  text-align: center;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
+.font-extrabold {
+  font-weight: 800;
 }
 
 .text-white {
@@ -775,47 +797,17 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.after\:absolute::after {
-  content: var(--tw-content);
-  position: absolute;
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.after\:bottom-0::after {
-  content: var(--tw-content);
-  bottom: 0px;
+.underline {
+  text-decoration-line: underline;
 }
 
-.after\:left-0::after {
-  content: var(--tw-content);
-  left: 0px;
-}
-
-.after\:h-px::after {
-  content: var(--tw-content);
-  height: 1px;
-}
-
-.after\:w-0::after {
-  content: var(--tw-content);
-  width: 0px;
-}
-
-.after\:bg-blue-700::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-}
-
-.after\:transition-all::after {
-  content: var(--tw-content);
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.after\:duration-500::after {
-  content: var(--tw-content);
-  transition-duration: 500ms;
+.underline-offset-4 {
+  text-underline-offset: 4px;
 }
 
 .hover\:bg-blue-700:hover {
@@ -823,12 +815,37 @@ video {
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
-.hover\:text-blue-700:hover {
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
-}
+@media (min-width: 1024px) {
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
 
-.after\:hover\:w-full:hover::after {
-  content: var(--tw-content);
-  width: 100%;
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
+  .lg\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .lg\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
