--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -659,10 +659,6 @@ video {
   width: 100vw;
 }
 
-.w-\[10\%\] {
-  width: 10%;
-}
-
 .max-w-xl {
   max-width: 36rem;
 }
@@ -702,6 +698,10 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .bg-blue-500 {
@@ -787,6 +787,14 @@ video {
 
 .underline-offset-4 {
   text-underline-offset: 4px;
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .hover\:bg-blue-700:hover {
