FEAT: PREDICTOR PAGE

--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -619,6 +619,10 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-2\/4 {
   height: 50%;
 }
@@ -670,6 +674,10 @@ video {
 .transform {
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
